--- a/skeleton/domain/pom.xml
+++ b/skeleton/domain/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-  	<groupId>example.wsg</groupId>
+  	<groupId>com.wsg.sample</groupId>
   	<artifactId>parent</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
   	<relativePath>../g9-ws</relativePath>
@@ -14,13 +14,31 @@
   	<dependency>
 	     <groupId>org.codehaus.castor</groupId>
 	     <artifactId>castor-xml</artifactId>
-	     <version>1.3.1</version>
+	     <version>${castor.version}</version>
 	</dependency>
 	<dependency>
 	     <groupId>no.esito</groupId>
 	     <artifactId>genova-common</artifactId>
 	     <version>${genova.version}</version>
 	     <scope>compile</scope>
+	     <exclusions>
+	     	<exclusion>
+	     		<artifactId>hibernate-core</artifactId>
+	     		<groupId>org.hibernate</groupId>
+	     	</exclusion>
+	     	<exclusion>
+	     		<artifactId>spring-aop</artifactId>
+	     		<groupId>org.springframework</groupId>
+	     	</exclusion>
+	     	<exclusion>
+	     		<artifactId>spring-context-support</artifactId>
+	     		<groupId>org.springframework</groupId>
+	     	</exclusion>
+	     	<exclusion>
+	     		<artifactId>spring-expression</artifactId>
+	     		<groupId>org.springframework</groupId>
+	     	</exclusion>
+	     </exclusions>
 	</dependency>
   </dependencies>
 </project>
