--- a/skeleton/g9-ws/pom.xml
+++ b/skeleton/g9-ws/pom.xml
@@ -1,17 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>example.wsg</groupId>
+  <groupId>com.wsg.sample</groupId>
   <artifactId>parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
    <properties>
-      <genova.version>9.2.2-SNAPSHOT</genova.version>
+      <genova.version>9.3.0</genova.version>
+      <jetty.version>8.1.8.v20121106</jetty.version>
+	  <spring.ws.version>2.1.2.RELEASE</spring.ws.version>
+      <junit.version>4.11</junit.version>
+      <castor.version>1.3.2</castor.version>
+      <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
   </properties>
  
   <repositories>
       <repository>
           <id>wsg</id>
-          <url>http://www.esito.no/repo/mvn2/snapshots/</url>
+          <url>http://www.esito.no/repo/mvn2/releases/</url>
           <snapshots>
               <enabled>true</enabled>
           </snapshots>
