--- a/skeleton/service/pom.xml
+++ b/skeleton/service/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
     
   <parent>
-  	<groupId>example.wsg</groupId>
+  	<groupId>com.wsg.sample</groupId>
   	<artifactId>parent</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
   	<relativePath>../g9-ws</relativePath>
@@ -15,21 +15,10 @@
 		<plugin>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty-maven-plugin</artifactId>
-			<version>8.1.8.v20121106</version>
-			<!-- <configuration>
-				<stopPort>9666</stopPort>
-				<stopKey>foo</stopKey>
-				<connectors>
-					<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-						<port>8060</port>
-						<maxIdleTime>60000</maxIdleTime>
-					</connector>
-				</connectors>
-			</configuration>
-			 -->
+			<version>${jetty.version}</version>
 		</plugin>
 	</plugins>
-</build>
+  </build>
   
   <dependencies>
   	<dependency>
@@ -40,18 +29,16 @@
   	<dependency>
 	    <groupId>org.springframework.ws</groupId>
 	    <artifactId>spring-ws-core</artifactId>
-	    <version>2.0.4.RELEASE</version>
+  		<version>${spring.ws.version}</version>
 	    <scope>compile</scope>
 	</dependency>
 	
 	<dependency>
 		<groupId>org.eclipse.jetty.aggregate</groupId>
 		<artifactId>jetty-all</artifactId>
-		<version>8.1.5.v20120716</version>
+		<version>${jetty.version}</version>
 	</dependency>
 	
   </dependencies>
-  
-  
   
 </project>
